--- a/interactive_app/templates/index.html
+++ b/interactive_app/templates/index.html
@@ -1,16 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Disease as a Function of Climate Change</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Disease as a Function of Climate Change</title>
 </head>
+
 <body>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 jumbotron text-center">
+        <h1>Disease Incidence</h1>
+        <p>Use the interactive charts to explore the data</p>
+
+      </div>
+      <div class="row">
+        <div class="col-md-2">
+          <div class="well">
+            <h5>SELECT Year:</h5>
+            <select id="selDataset" onchange="optionChanged(this.value)"></select>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-5">
     <div id='graph'></div>
-    
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <script type="text/javascript" src="malaria_choropleth_slider.js"></script>
+  </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <script type="text/javascript" src="/../static/js/malaria_choropleth_slider.js"></script>
 </body>
+
 </html>
