--- a/interactive_app/templates/index.html
+++ b/interactive_app/templates/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Disease as a Function of Climate Change</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 
 <body>
@@ -19,20 +20,21 @@
       <div class="row">
         <div class="col-md-2">
           <div class="well">
-            <h5>SELECT Year:</h5>
+            <h5>Select Year:</h5>
             <select id="selDataset" onchange="optionChanged(this.value)"></select>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="col-md-5">
+  <div class="col-md-12">
     <div id='graph'></div>
   </div>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.6.1/bootstrap-slider.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script type="text/javascript" src="/../static/js/malaria_choropleth_slider.js"></script>
+  <script src="{{ url_for('static', filename='js/app.js') }}"></script>
 </body>
 
 </html>
