--- a/interactive_app/templates/index.html
+++ b/interactive_app/templates/index.html
@@ -27,8 +27,13 @@
       </div>
     </div>
   </div>
-  <div class="col-md-12">
-    <div id='graph'></div>
+  <div class="row">
+    <div class="col-md-4">
+      <div id='malaria_map'></div>
+    </div>
+    <div class="col-md-4">
+      <div id="area" class="image"></div>
+    </div>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.6.1/bootstrap-slider.js"></script>
