--- a/interactive_app/templates/index.html
+++ b/interactive_app/templates/index.html
@@ -36,9 +36,15 @@
       <div id="area" class="image"></div>
     </div>
   </div>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="chart"></div>
+    </div>
+  </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.6.1/bootstrap-slider.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="{{ url_for('static', filename='js/app.js') }}"></script>
 </body>
