--- a/interactive_app/templates/index.html
+++ b/interactive_app/templates/index.html
@@ -36,10 +36,12 @@
       <div id="area" class="image"></div>
     </div>
   </div>
+  <div class="row"></div>
   <div class="row">
     <div class="col-md-12">
       <div class="chart"></div>
     </div>
+
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.6.1/bootstrap-slider.js"></script>
