--- a/interactive_app/static/css/style.css
+++ b/interactive_app/static/css/style.css
@@ -2,21 +2,21 @@
     font-family: sans-serif;
     font-size: 16px;
     text-anchor: middle;
-  }
+}
   
 .active {
     font-weight: bold;
     fill: #000;
     transition: fill 0.3s ease-out;
     text-anchor: middle;
-  }
+}
   
-  .inactive {
+.inactive {
     font-weight: lighter;
     fill: #c9c9c9;
     transition: fill 0.3s ease-out;
     text-anchor: middle;
-  }
+}
   
   .image::before {
     position: absolute;
@@ -61,7 +61,7 @@
     .aText {
       font-size: 13px;
     }
-  }
+  }}
 
   .chart::before {
     position: absolute;
@@ -71,18 +71,18 @@
     display: block;
     width: 1000px;
     height: 635px;
-    content: " ";
-    background-image: url("Winkel_triple_projection_SW.jpg");
+    content: "";
+    background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Winkel_triple_projection_SW.jpg/525px-Winkel_triple_projection_SW.jpg");
     background-repeat: no-repeat;
     background-position: 50% 0;
     background-size: cover;
     opacity: 0.3;
   }
   
-  .line {
+  /* .line {
     fill: none;
     stroke-width: 2px;
-  }
+  } */
   
   .red {
     stroke: red;
@@ -92,10 +92,10 @@
     stroke: blue;
   }
   
-  .text {
+  /* .text {
     font-size: 16px;
     text-anchor: middle;
-  }
+  } */
   
   .CO2-text {
     fill: rgb(0, 0, 0);
@@ -104,4 +104,4 @@
   .year-text {
     fill: rgb(0, 0, 0);
   }
-  }
+  
